<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_restactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ch.ethz.inf.vs.a2.gruntzp.vs_gruntzp_webservices.RESTactivity">

    <LinearLayout
        android:layout_marginBottom="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:onClick="getTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RawHTML"/>
        <Button
            android:onClick="getTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HttpClass"/>
        <Button
            android:onClick="getTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/JSon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Temperature: "
            android:layout_marginRight="10sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtValue"/>
    </LinearLayout>

</LinearLayout>
